ProdIND/ProdPrograms/force-app/main/default/objects/Bank_Masters__c/Bank_Masters__c.object-meta.xml
<CustomObject>
    <label>Bank Master</label>
    <nameField>
        <label>Bank Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bank Masters</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>