ProdIND/ProdPrograms/force-app/main/default/objects/Bank_Masters__c/fields/Bank_Code__c.field-meta.xml
<CustomField>
    <fullName>Bank_Code__c</fullName>
    <externalId>true</externalId>
    <label>Bank Code</label>
    <precision>7</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>