ProdIND/ProdPrograms/force-app/main/default/objects/Bank_Masters__c/fields/Perfios_Bank_Code__c.field-meta.xml
<CustomField>
    <fullName>Perfios_Bank_Code__c</fullName>
    <description>Institution Id</description>
    <label>Perfios_Bank_Code</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>