ProdIND/ProdPrograms/force-app/main/default/objects/Bank_Masters__c/fields/Perfios_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Perfios_Bank_Name__c</fullName>
    <label>Perfios_Bank_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>