ProdIND/ProdPrograms/force-app/main/default/objects/Bank_Masters__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Bank_Code__c</columns>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Perfios_Bank_Code__c</columns>
    <columns>Perfios_Bank_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>